mod: modify file

--- a/docs/tech/周边开发技术/前后端开发概述(二).md
+++ b/docs/tech/周边开发技术/前后端开发概述(二).md
@@ -400,6 +400,94 @@ P2P内网穿越：STUN/TURN/ICE/Trickle ICE
 
 
 
+## CI/CD
+
+持续集成（Continuous integration，简称CI）,
+
+持续集成指的是，频繁地（一天多次）将代码集成到主干。 它的好处主要有两个:
+
+1.快速发现错误。每完成一点更新，就集成到主干，可以快速发现错误，定位错误也比较容易。
+
+2.防止分支大幅偏离主干。如果不是经常集成，主干又在不断更新，会导致以后集成的难度变大，甚至难以集成。
+
+持续集成的目的，就是让产品可以快速迭代，同时还能保持高质量。它的核心措施是，代码集成到主干之前，必须通过自动化测试。只要有一个测试用例失败，就不能集成。
+
+持续交付（Continuous delivery)，
+
+持续交付指的是，频繁地将软件的新版本，交付给质量团队或者用户，以供评审。如果评审通过，代码就进入生产阶段。 持续交付可以看作持续集成的下一步。它强调的是，不管怎么更新，软件是随时随地可以交付的。
+
+持续部署（continuous deployment）
+
+持续部署是持续交付的下一步，指的是代码通过评审以后，自动部署到生产环境。
+
+持续部署的目标是，代码在任何时刻都是可部署的，可以进入生产阶段。
+
+根据持续集成的设计，代码从提交到生产，整个过程有以下几步。
+
+（1）提交。流程的第一步，是开发者向代码仓库提交代码。所有后面的步骤都始于本地代码的一次提交
+
+（2）测试（第一轮）。代码仓库对commit操作配置了钩子（hook），只要提交代码或者合并进主干，就会跑自动化测试。 测试有好几种。
+
+- 单元测试：针对函数或模块的测试
+- 集成测试：针对整体产品的某个功能的测试，又称功能测试
+- 端对端测试：从用户界面直达数据库的全链路测试
+
+（3） 构建。通过第一轮测试，代码就可以合并进主干，就算可以交付了。 交付后，就先进行构建（build），再进入第二轮测试。所谓构建，指的是将源码转换为可以运行的实际代码，比如安装依赖，配置各种资源（样式表、JS脚本、图片）等等。 常用的构建工具如下。
+
+（4） 测试（第二轮）。构建完成，就要进行第二轮测试。如果第一轮已经涵盖了所有测试内容，第二轮可以省略，当然，这时构建步骤也要移到第一轮测试前面。
+
+第二轮是全面测试，单元测试和集成测试都会跑，有条件的话，也要做端对端测试。所有测试以自动化为主，少数无法自动化的测试用例，就要人工跑。
+
+需要强调的是，新版本的每一个更新点都必须测试到。如果测试的覆盖率不高，进入后面的部署阶段后，很可能会出现严重的问题。
+
+（5）部署。通过了第二轮测试，当前代码就是一个可以直接部署的版本（artifact）。将这个版本的所有文件打包（ tar filename.tar * ）存档，发到生产服务器。
+
+（6）回滚。一旦当前版本发生问题，就要回滚到上一个版本的构建结果。最简单的做法就是修改一下符号链接，指向上一个版本的目录。
+
+## 软件版本控制
+
+软件开发周期版本控制及称号策略
+
+alpha：内测版，bug多，不稳定，内部版本，不断添加功能
+
+alpha是希腊字母的第一个，表示最早的版本，内部测试版，一般不对外发布，bug多且功能不全，一般只有测试人员使用
+
+Beta1、beta2:公测版，不稳定(比alpha稳定一些)，bug相对还多，且不断添加新功能
+
+beta是希腊字母的第二个，公开测试版，比alpha版本晚一些，主要对部分粉丝用户进行测试使用
+
+RC：候选版，经过多个beta版本逐渐稳定，基本不添加新功能，修复完bug即可进入正式发布版
+
+RC是Release Candidate，候选版本。
+
+GA、RELEASE、Stable、Final：正式版，bug很少，推荐生产使用
+
+GA：General Availability
+
+RELEASE：发行版，sping使用
+
+Stabel：稳定版，Nginx使用
+
+Final：最终版本
+
+其他版本称谓：
+
+Free：自由版
+
+Enhance：增强版
+
+Upgrade：升级版
+
+Plus：增加版
+
+Premium：贵价版
+
+Pro/Professional：专业版
+
+Mini/Lite：精简版，只有最基本的功能
+
+Corporation/Enterprise：企业版
+
 
 
 ## 直播
@@ -414,73 +502,6 @@ P2P内网穿越：STUN/TURN/ICE/Trickle ICE
 
 
 https://html.form.guide/email-form/email-form-mailto/
-
-## Serverless
-
-Serverless 是前端圈近两年比较火热的词汇,通过 Serverless 这种服务形态，用户在使用对应的服务时，不需要关心或较少关心服务器的硬件资源、软件资源、稳定性等等，完全托管给云计算厂商，用户只需要专注自己应用代码本身，上传执行函数到相应云计算平台，按照函数运行的时长按量付费即可
-
-### 演进史
-
-云计算诞生后，用户可以直接购买云主机（VM），把基础物理硬件和网络的管理都交由供应商管理，多用户租用一台物理机，减少了用户硬件管理成本，我们通常称之为 IaaS（Infrastructure-as-a-Service）。
-
-随着软件的发展和容器技术的兴起，计算环境由 VM 发展到更小粒度的容器，在容器中可以运行不同的软件服务，PaaS（Platform-as-a-Service） 和 CaaS（Container-as-a-Service） 也开始映入眼帘。用户使用平台基础软件如 Database、消息等开发自己的应用，使用容器镜像构建和部署应用，最后托管给平台。
-
-继续向前发展，应用的运行演变为更细粒度函数的运行，用户开发特定业务的处理函数，托管给函数平台，按需使用相关的后端服务，通过特定条件的触发完成开发者业务逻辑函数的计算。用户无需为应用持续付费，只需支付函数运行时产生的资源消耗费用，而这，就是 Serverless 服务的模型。
-
-### 基本架构
-
-Serverless 架构由两部分组成，即 Faas 和 BaaS。
-
-Faas
-
-FaaS（Function-as-a-Service）即为函数运行平台，用户无需搭建庞大的服务系统，只需要上传自己的逻辑函数如一些定时任务、数据处理任务等到云函数平台，配置执行条件触发器、路由等等，完成基础函数的注册。
-
-Faas 运行函数的容器是无状态的，上一次的运行效果和下一次的运行效果是无关的。如果需要存储状态，则需要使用云储存或者云数据库。
-
-Faas 函数如果长时间未使用，容器就会对其进行回收。所以函数在首次调用或长时间未使用时，容器就需要重新创建该函数的实例，这个过程称为冷启动，一般耗时为数百毫秒。
-
-Faas是通过事件驱动的，当一个任务被触发时，比如 HTTP 请求，API Gateway 接受请求、解析和认证，传递对应参数给云函数平台，平台中执行对应回调函数，配合 DB、MQ 等 BaaS 服务在特定容器中完成计算，最终将结果返回给用户。函数执行完成后，一般会被 FaaS 平台销毁，释放对应容器，等待下一个函数运行。
-
-既然有冷启动，就有热启动。例如容器刚刚调用完函数，过一会又有新的事件触发。这时由于函数仍未被回收，所以可以直接复用原有的函数实例，这被称为热启动。
-
-Faas 如果单独使用的话，那它只适合部署一些工具类函数。因为它是无状态的，每次运行都可能是在不同的容器上，它不知道上一个函数的运行结果。所以如果要使用 Serverless 来部署整个应用，还得额外购买 OSS 云存储或者云数据库来提供数据存储服务（也就是需要配合 Baas 来使用）。
-
-Baas
-
-BaaS（Backend-as-a-Service）包含了后端服务组件，它是基于 API 的第三方服务，用于实现应用程序中的核心功能，包含常用的数据库、对象存储、消息队列、日志服务等等
-
-Faas与Baas
-
-Faas 其实是一个云计算平台，用户可以将自己写的函数托管到平台上运行。而 Baas 则是提供一系列的服务给用户运用，用户通过 API 调用。
-
-其他不同点：
-
-- Faas 无状态，Baas 有状态。
-- Faas 运行的是函数，由开发者自己编写；Baas 提供的是服务，不需要开发者自己开发。
-
-可以说 Faas 和 Baas 是两个不同的东西，但它们有一个共同点，就是无需自己管理服务器和资源的分配、整理，所以都属于 Serverless。
-
-
-
-### 应用场景
-
-Serverless 其实是通过事件驱动的，当一个任务被触发时，比如 HTTP 请求，API Gateway 接受请求、解析和认证，传递对应参数给云函数平台，平台中执行对应回调函数，配合 DB、MQ 等 BaaS 服务在特定容器中完成计算，最终将结果返回给用户。函数执行完成后，一般会被 FaaS 平台销毁，释放对应容器，等待下一个函数运行。
-
-
-
-### 优缺点
-
-优点
-
-Serverless 最大的优点就是自动扩展伸缩、无需自己管理。
-
-在以往部署一个应用时，需要经历购买服务器、安装操作系统、购买域名等等一系列步骤，应用才能真正的上线。后来有了云服务器，我们就省去了购买服务器、安装操作系统这些操作步骤。只需要在云服务器上搭建环境、安装数据库就可以部署应用了。
-
-但是这仍然有个问题，当网站访问量过大时，你需要增加服务器；访问量过小时，需要减少服务器。如果使用 Serverless，你就不需要考虑这些，云服务商会帮你管理这一切。云服务商会根据你的访问量自动调整所需的资源。
-
-缺点
-
-当应用部署在云上，并且使用云存储或云数据库，那可能会让我们的应用访问速度变得比较慢。因为网络的访问速度比内存和硬盘差了一到两个数量级。
 
 
 
