--- a/docs/tech/进阶前端技术/前端工程化一.md
+++ b/docs/tech/进阶前端技术/前端工程化一.md
@@ -7,9 +7,7 @@ toc: true
 thumbnail: http://cdn.kunkunzhang.top/webpack.png
 ---
 
-　　前端的基础是html、css和JavaScript，掌握这些能够实现基本的功能和整齐的样式。掌握vue或者react框架能够快速实现spa应用。
-
-​       对于进阶，掌握基本原理和一些动画方面的库能够更美观的进行展现，实现更炫酷的动画效果。
+　　前端进阶-前端工程化一，webpack基本概念和使用
 
 <!--more-->
 
