--- a/docs/tech/进阶前端技术/前端工程化三.md
+++ b/docs/tech/进阶前端技术/前端工程化三.md
@@ -7,9 +7,7 @@ toc: true
 thumbnail: http://cdn.kunkunzhang.top/webpack.png
 ---
 
-　　前端的基础是html、css和JavaScript，掌握这些能够实现基本的功能和整齐的样式。掌握vue或者react框架能够快速实现spa应用。
-
-​       对于进阶，掌握基本原理和一些动画方面的库能够更美观的进行展现，实现更炫酷的动画效果。
+　　Webpack五以及其他打包工具
 
 <!--more-->
 
@@ -776,6 +774,28 @@ Vite 同时利用 HTTP 头来加速整个页面的重新加载（再次让浏览
 npm install -g wp2vite
 ```
 
+命令行使用
+
+```shell
+cd your_workspace/your_project
+## 执行wp2vite的命令行
+wp2vite 
+or 
+wp2vite init
+```
+
+然后启动项目就行
+
+```shell
+// 安装依赖
+npm install
+
+// 启动项目
+npm run dev // 如果原先你的项目有dev script，请执行下面的命令
+or
+npm run vite-start
+```
+
 
 
 ### snowpack
@@ -805,5 +825,4 @@ wepack：https://www.kancloud.cn/sllyli/webpack/1242354
 
 
 ​                   
-
 
