--- a/docs/tech/进阶前端技术/前端工程化二.md
+++ b/docs/tech/进阶前端技术/前端工程化二.md
@@ -1,5 +1,5 @@
 ---
-title: 前端进阶（一）-前端工程化
+title: 前端进阶（二）-前端工程化
 date: 2020-12-15 21:40:33
 categories: IT
 tags: IT，Web,数据库
@@ -7,9 +7,7 @@ toc: true
 thumbnail: http://cdn.kunkunzhang.top/webpack.png
 ---
 
-　　前端的基础是html、css和JavaScript，掌握这些能够实现基本的功能和整齐的样式。掌握vue或者react框架能够快速实现spa应用。
-
-​       对于进阶，掌握基本原理和一些动画方面的库能够更美观的进行展现，实现更炫酷的动画效果。
+　　前端工程化二-webpack原理
 
 <!--more-->
 
@@ -197,7 +195,71 @@ module.exports = merge(commonConfig,prodConfig);
 
 ## webpack-chain
 
+使用链式的方式调用webpack的api
 
+安装
+
+```shell
+npm install --save-dev webpack-chain
+```
+
+使用
+
+```javascript
+const Config = require('webpack-chain');
+
+const config = new Config();
+
+config
+  // Interact with entry points
+  .entry('index')
+    .add('src/index.js')
+    .end()
+  // Modify output settings
+  .output
+    .path('dist')
+    .filename('[name].bundle.js');
+
+// Create named rules which can be modified later
+config.module
+  .rule('lint')
+    .test(/\.js$/)
+    .pre()
+    .include
+      .add('src')
+      .end()
+    // Even create named uses (loaders)
+    .use('eslint')
+      .loader('eslint-loader')
+      .options({
+        rules: {
+          semi: 'off'
+        }
+      });
+
+config.module
+  .rule('compile')
+    .test(/\.js$/)
+    .include
+      .add('src')
+      .add('test')
+      .end()
+    .use('babel')
+      .loader('babel-loader')
+      .options({
+        presets: [
+          ['@babel/preset-env', { modules: false }]
+        ]
+      });
+
+// Create named plugins too!
+config
+  .plugin('clean')
+    .use(CleanPlugin, [['dist'], { root: '/dir' }]);
+
+// Export the completed configuration object to be consumed by webpack
+module.exports = config.toConfig();
+```
 
 
 
