feat: 添加工程化相关

--- a/docs/tech/进阶前端技术/前端数据可视化二.md
+++ b/docs/tech/进阶前端技术/前端数据可视化二.md
@@ -2,7 +2,8 @@
 odytitle: 前端进阶（七）-二维可视化
 date: 2021-7-10 21:40:33
 categories: IT
-tags: IT，Web
+tags:
+    - IT，Web
 toc: true
 thumbnail: http://cdn.kunkunzhang.top/echart2.jpg
 ---
@@ -753,7 +754,7 @@ var dots = [
 </script>
 ```
 
-
+#### canvas
 
 
 
@@ -764,6 +765,8 @@ Https://d3js.org.cn
 d3案例：https://csacademy.com/app/graph_editor/
 
 https://bl.ocks.org/mohdsanadzakirizvi/6fc325042ce110e1afc1a7124d087130
+
+https://observablehq.com/explore
 
 
 
@@ -883,11 +886,27 @@ graph.render(); // 渲染图
 
 
 
-
-
 ### keylines
 
 
+
+### cytoscape.js
+
+
+
+### jointjs
+
+
+
+### nivo
+
+安装
+
+```shell
+yarn add @nivo/core @nivo/bar
+```
+
+官网：https://nivo.rocks/
 
 
 
@@ -935,205 +954,95 @@ Souce 源节点、Target 目标节点、Anchor 锚点、Endpoint 端点、Connec
 
 
 
-## echart
+## Canvas
 
-高效率绘制各种美观图表
+### Fabricjs
 
-安装echart
+二维的h5 canvas库
 
-```shell
-npm install echarts --save
-```
 
-安装完成后 ECharts 和 zrender 会放在 node_modules 目录下
 
-引入echart
+自定义
 
-```javascript
-import echarts from "echarts"
-```
+http://fabricjs.com/customization
 
-### 基础的数据可视化
+支持鼠标事件
 
-基本名词解释
-
-| 名词           | 描述                                                         |
-| :------------- | :----------------------------------------------------------- |
-| chart          | 是指一个完整的图表，如折线图，饼图等“基本”图表类型或由基本图表组合而成的“混搭”图表，可能包括坐标轴、图例等 |
-| axis           | 直角坐标系中的一个坐标轴，坐标轴可分为类目型、数值型或时间型 |
-| xAxis          | 直角坐标系中的横轴，通常并默认为类目型                       |
-| yAxis          | 直角坐标系中的纵轴，通常并默认为数值型                       |
-| grid           | 直角坐标系中除坐标轴外的绘图网格，用于定义直角系整体布局     |
-| legend         | 图例，表述数据和图形的关联                                   |
-| dataRange      | 值域选择，常用于展现地域数据时选择值域范围                   |
-| dataZoom       | 数据区域缩放，常用于展现大量数据时选择可视范围               |
-| roamController | 缩放漫游组件，搭配地图使用                                   |
-| toolbox        | 辅助工具箱，辅助功能，如添加标线，框选缩放等                 |
-| tooltip        | 气泡提示框，常用于展现更详细的数据                           |
-| timeline       | 时间轴，常用于展现同一系列数据在时间维度上的多份数据         |
-| series         | 数据系列，一个图表可能包含多个系列，每一个系列可能包含多个数据 |
-
-图表名词
-
-| 名词       | 描述                                                         |
-| :--------- | :----------------------------------------------------------- |
-| line       | 折线图，堆积折线图，区域图，堆积区域图。                     |
-| bar        | 柱形图（纵向），堆积柱形图，条形图（横向），堆积条形图。     |
-| scatter    | 散点图，气泡图。散点图至少需要横纵两个数据，更高维度数据加入时可以映射为颜色或大小，当映射到大小时则为气泡图 |
-| k          | K线图，蜡烛图。常用于展现股票交易数据。                      |
-| pie        | 饼图，圆环图。饼图支持两种（半径、面积）南丁格尔玫瑰图模式。 |
-| radar      | 雷达图，填充雷达图。高维度数据展现的常用图表。               |
-| chord      | 和弦图。常用于展现关系数据，外层为圆环图，可体现数据占比关系，内层为各个扇形间相互连接的弦，可体现关系数据 |
-| force      | 力导布局图。常用于展现复杂关系网络聚类布局。                 |
-| map        | 地图。内置世界地图、中国及中国34个省市自治区地图数据、可通过标准GeoJson扩展地图类型。支持svg扩展类地图应用，如室内地图、运动场、物件构造等。 |
-| heatmap    | 热力图。用于展现密度分布信息，支持与地图、百度地图插件联合使用。 |
-| gauge      | 仪表盘。用于展现关键指标数据，常见于BI类系统。               |
-| funnel     | 漏斗图。用于展现数据经过筛选、过滤等流程处理后发生的数据变化，常见于BI类系统。 |
-| evnetRiver | 事件河流图。常用于展示具有时间属性的多个事件，以及事件随时间的演化。 |
-| treemap    | 矩形式树状结构图，简称：矩形树图。用于展示树形数据结构，优势是能最大限度展示节点的尺寸特征。 |
-| venn       | 韦恩图。用于展示集合以及它们的交集。                         |
-| tree       | 树图。用于展示树形数据结构各节点的层级关系                   |
-| wordCloud  | 词云。词云是关键词的视觉化描述，用于汇总用户生成的标签或一个网站的文字内容 |
-
-实例
+http://fabricjs.com/events
 
 ```javascript
-    //基于准备好的dom,初始化echart图表  
-    var myChart = ec.init(document.getElementById('mainBar'));  
-    //定义图表option  
-    var option = {  
-      //标题，每个图表最多仅有一个标题控件，每个标题控件可设主副标题  
-      title: {  
-        //主标题文本，'\n'指定换行  
-        text: '2013年广州降水量与蒸发量统计报表',  
-        //主标题文本超链接  
-        link: 'http://www.tqyb.com.cn/weatherLive/climateForecast/2014-01-26/157.html',  
-        //副标题文本，'\n'指定换行  
-        subtext: 'www.stepday.com',  
-        //副标题文本超链接  
-        sublink: 'http://www.stepday.com/myblog/?Echarts',  
-        //水平安放位置，默认为左侧，可选为：'center' | 'left' | 'right' | {number}（x坐标，单位px）  
-        x: 'left',  
-        //垂直安放位置，默认为全图顶端，可选为：'top' | 'bottom' | 'center' | {number}（y坐标，单位px）  
-        y: 'top'  
-      },
-      //提示框，鼠标悬浮交互时的信息提示  
-      tooltip: {  
-        //触发类型，默认（'item'）数据触发，可选为：'item' | 'axis'  
-        trigger: 'axis'  
-      },  
-      //图例，每个图表最多仅有一个图例  
-      legend: {  
-        //显示策略，可选为：true（显示） | false（隐藏），默认值为true  
-        show: true,  
-        //水平安放位置，默认为全图居中，可选为：'center' | 'left' | 'right' | {number}（x坐标，单位px）  
-        x: 'center',  
-        //垂直安放位置，默认为全图顶端，可选为：'top' | 'bottom' | 'center' | {number}（y坐标，单位px）  
-        y: 'top',  
-        //legend的data: 用于设置图例，data内的字符串数组需要与sereis数组内每一个series的name值对应  
-        data: ['蒸发量','降水量']  
-      },
-      //工具箱，每个图表最多仅有一个工具箱  
-      toolbox: {  
-        //显示策略，可选为：true（显示） | false（隐藏），默认值为false  
-        show: true,  
-        //启用功能，目前支持feature，工具箱自定义功能回调处理  
-        feature: {  
-          //辅助线标志  
-          mark: {show: true},  
-          //dataZoom，框选区域缩放，自动与存在的dataZoom控件同步，分别是启用，缩放后退  
-          dataZoom: {  
-            show: true,  
-            title: {  
-              dataZoom: '区域缩放',  
-              dataZoomReset: '区域缩放后退'  
-            }  
-          },  
-          //数据视图，打开数据视图，可设置更多属性,readOnly 默认数据视图为只读(即值为true)，可指定readOnly为false打开编辑功能  
-          dataView: {show: true, readOnly: true},  
-          //magicType，动态类型切换，支持直角系下的折线图、柱状图、堆积、平铺转换  
-          magicType: {show: true, type: ['line', 'bar']},  
-          //restore，还原，复位原始图表  
-          restore: {show: true},  
-          //saveAsImage，保存图片（IE8-不支持）,图片类型默认为'png'  
-          saveAsImage: {show: true}  
-        }  
-      }, 
-      //是否启用拖拽重计算特性，默认关闭(即值为false)  
-      calculable: true, 
-      //直角坐标系中横轴数组，数组中每一项代表一条横轴坐标轴，仅有一条时可省略数值  
-      //横轴通常为类目型，但条形图时则横轴为数值型，散点图时则横纵均为数值型  
-      xAxis: [  
-        {  
-          //显示策略，可选为：true（显示） | false（隐藏），默认值为true  
-          show: true,  
-          //坐标轴类型，横轴默认为类目型'category'  
-          type: 'category',  
-          //类目型坐标轴文本标签数组，指定label内容。 数组项通常为文本，'\n'指定换行  
-          data: ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月']  
-        }  
-      ],
-      //直角坐标系中纵轴数组，数组中每一项代表一条纵轴坐标轴，仅有一条时可省略数值  
-      //纵轴通常为数值型，但条形图时则纵轴为类目型  
-      yAxis: [  
-        {  
-          //显示策略，可选为：true（显示） | false（隐藏），默认值为true  
-          show: true,  
-          //坐标轴类型，纵轴默认为数值型'value'  
-          type: 'value',  
-          //分隔区域，默认不显示  
-          splitArea: {show: true}  
-        }  
-      ],
-      //sereis的数据: 用于设置图表数据之用。series是一个对象嵌套的结构；对象内包含对象  
-      series: [  
-        {  
-          //系列名称，如果启用legend，该值将被legend.data索引相关  
-          name: '蒸发量',  
-          //图表类型，必要参数！如为空或不支持类型，则该系列数据不被显示。  
-          type: 'bar',  
-          //系列中的数据内容数组，折线图以及柱状图时数组长度等于所使用类目轴文本标签数组axis.data的长度，并且他们间是一一对应的。数组项通常为数值  
-          data: [2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6, 162.2, 32.6, 20.0, 6.4, 3.3],  
-          //系列中的数据标注内容  
-          markPoint: {  
-            data: [  
-              {type: 'max', name: '最大值'},  
-              {type: 'min', name: '最小值'}  
-            ]  
-          },  
-          //系列中的数据标线内容  
-          markLine: {  
-            data: [  
-              {type: 'average', name: '平均值'}  
-            ]  
-          }  
-        },  
-        {  
-          //系列名称，如果启用legend，该值将被legend.data索引相关  
-          name: '降水量',  
-          //图表类型，必要参数！如为空或不支持类型，则该系列数据不被显示。  
-          type: 'bar',  
-          //系列中的数据内容数组，折线图以及柱状图时数组长度等于所使用类目轴文本标签数组axis.data的长度，并且他们间是一一对应的。数组项通常为数值  
-          data: [2.6, 5.9, 9.0, 26.4, 28.7, 70.7, 175.6, 182.2, 48.7, 18.8, 6.0, 2.3],  
-          //系列中的数据标注内容  
-          markPoint: {  
-            data: [  
-              {type: 'max', name: '最大值'},  
-              {type: 'min', name: '最小值'}  
-            ]  
-          },  
-          //系列中的数据标线内容  
-          markLine: {  
-            data: [  
-              {type: 'average', name: '平均值'}  
-            ]  
-          }  
-        }  
-      ]  
-    }; 
-      //为echarts对象加载数据              
-      myChart.setOption(option); 
+(function() {
+  var canvas = this.__canvas = new fabric.Canvas('c');
+  fabric.Object.prototype.transparentCorners = false;
+
+  canvas.on('mouse:over', function(e) {
+    e.target.set('fill', 'red');
+    canvas.renderAll();
+  });
+
+  canvas.on('mouse:out', function(e) {
+    e.target.set('fill', 'green');
+    canvas.renderAll();
+  });
+
+  // add random objects
+  for (var i = 15; i--; ) {
+    var dim = fabric.util.getRandomInt(30, 60);
+    var klass = ['Rect', 'Triangle', 'Circle'][fabric.util.getRandomInt(0,2)];
+    var options = {
+      top: fabric.util.getRandomInt(0, 600),
+      left: fabric.util.getRandomInt(0, 600),
+      fill: 'green'
+    };
+    if (klass === 'Circle') {
+      options.radius = dim;
+    }
+    else {
+      options.width = dim;
+      options.height = dim;
+    }
+    canvas.add(new fabric[klass](options));
+  }
+})();
 ```
+
+
+
+#### fabricjs-react
+
+支持react的fabricjs库
+
+```react
+import React from 'react'
+
+import { FabricJSCanvas, useFabricJSEditor } from 'fabricjs-react'
+
+const App = () => {
+  const { editor, onReady } = useFabricJSEditor()
+  const onAddCircle = () => {
+    editor?.addCircle()
+  }
+  const onAddRectangle = () => {
+    editor?.addRectangle()
+  }
+
+  return (<div>
+    <button onClick={onAddCircle}>Add circle</button>
+    <button onClick={onAddRectangle}>Add Rectangle</button>
+    <FabricJSCanvas className="sample-canvas" onReady={onReady} />
+  </div>)
+}
+
+export default App
+```
+
+
+
+## 布局
+
+### dagre
+
+
 
 
 
