feat: 添加普罗斯特问卷

--- a/docs/关于/普罗斯特问卷.md
+++ b/docs/关于/普罗斯特问卷.md
@@ -46,7 +46,7 @@ thumbnail:
 
 ## 你最喜欢的旅行是哪一次？
 
-　　  我认为是即将到来的一次。我旅行的次数不多，以前去过北京、香港，也因为出差去过上海、广州等地。但是我最喜欢的旅行应该是我今年（2020）或者明年（2021）去斯里兰卡找我的朋友。我的计划路线是到新加坡、泰国、斯里兰卡。这将是我的第一次出国旅行，斯里兰卡的那位好朋友也很热情，向我多次介绍物价低廉，我应该会很享受。
+　　  我认为是即将到来的一次。我旅行的次数不多，以前去过北京、澳门、香港，也因为出差去过上海、广州等地。但是我最喜欢的旅行应该是我今年（2020）或者明年（2021）去斯里兰卡找我的朋友。我的计划路线是到新加坡、泰国、斯里兰卡。这将是我的第一次出国旅行，斯里兰卡的那位好朋友也很热情，向我多次介绍物价低廉，我应该会很享受。
 
 ## 你最痛恨别人的什么特点？
 
