feat: 添加大学记

--- a/docs/年终总结/2020新年总结.md
+++ b/docs/年终总结/2020新年总结.md
@@ -41,7 +41,7 @@ thumbnail: http://cdn.kunkunzhang.top/happy-new-year-fireworks.jpg
 - 第三件事具体的目标来说，购入一款飞利浦或谷星或者lg的27寸2k或者4K屏幕(物理)，再购入一款镜头(物理)，再购入y9000x(物理)。目前暂定这些，让我们看看21年末的时候我能做到哪些。
 - 第四件是就是希望再认识一些有趣的朋友。我很久没有再认识像陈君或者周哥这样见多识广，能突破我现有的认知界限又对我好的人了，他们目前也不在身边，希望今年能有一些突破。
 
-![2021年度计划-图版](http://cdn.kunkunzhang.top/2021.jpg)
+![2021年度计划-图版](https://cdn.kunkunzhang.top/2021.jpg)
 
 师兄总是说我付出的时间不够，是由于我接触时间太短了，不能操之过急。希望能够一切顺利。
 
