feat: update docs

--- a/docs/tech/go/Go10.md
+++ b/docs/tech/go/Go10.md
@@ -1,5 +1,5 @@
 ---
-title: Golang语言开发(五)
+title: Golang语言开发(十)
 date: 2020-03-02 21:40:33
 categories: 技术博客
 tags:
@@ -776,3 +776,12 @@ $ curl 'localhost:9200/accounts/person/_search'  -d '
 
 ## clickHouse
 
+### clickHouse与elasticSearch的区别
+
+- Elasticsearch 使用内存进行缓存，会占用较多内存，ClickHouse 使用磁盘进行缓存，使用内存较少。
+- ClickHouse 在多核情况下查询速度会更快。
+- Elasticsearch 在针对查询情况下速度较快，但是针对需要大量计算的情况下会很慢。
+- ClickHouse 针对数据量较大的情况查询更快。
+- Elasticsearch 针对 timeseries 聚合与普通聚合查询时间差距不大，CLickHouse 针对 timeseries 查询会比普通查询更慢。
+- 相对于 Elasticsearch，ClickHouse 对数据进行压缩合并，使用更少的磁盘空间。
+- 在大查询情况下，Elasticsearch 容易 OOM。ClickHouse 有查询内存上限，大查询不会导致 ClickHouse-Server OOM
