--- a/docs/年终总结/2022新年总结.md
+++ b/docs/年终总结/2022新年总结.md
@@ -74,7 +74,7 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 ### 跳槽与涨薪
 
-​      在工作的前两年时间里我跳槽了两次，并且每家公司都不久，原因是我总是对现状不满，以及需要更多的薪水。在2021年11月份我跳槽到现在的公司。leader不错，性格比较极客和开放，团队不错，氛围轻松不压抑，公司也还行，该有的福利大部分都有，我在团队中也扮演着主力开发的角色。
+​      在工作的前两年时间里我跳槽了两次，并且每家公司都不久，原因是我总是对现状不满，以及需要更多的薪水。我现在的公司leader不错，性格比较极客和开放，团队不错，氛围轻松不压抑，公司也还行，该有的福利大部分都有，我在团队中也扮演着主力开发的角色。
 
 ​       这是我前两年努力的结果，简单来说，现在进入一家几百人的公司，以及一个不错的团队，，那么我接下来努力应该达到什么结果呢？
 
