--- a/docs/年终总结/2023新年总结.md
+++ b/docs/年终总结/2023新年总结.md
@@ -6,12 +6,14 @@ tags:
     - 个人生活，幸福
 toc: true
 hidden: true
-thumbnail: https://cdn.kunkunzhang.top/2022.png
+thumbnail: https://cdn.kunkunzhang.top/2023.png
 ---
 
 ​       总结2023，展望2024
 
 ​	   一个有趣的想法是，如果人的一生总共工作60年(5岁-65岁)，以五年为一个节点，划分为12个阶段，我现在应当处于植物茂盛生长的夏季的第二个月(5岁-15岁为春季，15-30岁为夏天)。我应该全力以赴地去壮大自己。
+
+​       事实上，每年都感觉是很艰难的一年，每度过一年就会庆幸过去的一年无灾无难，或者就算有也总算度过了，心就变的平和和安定，写这样的年终总结，提醒自己。
 
 <!--more-->
 
@@ -19,13 +21,16 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 2022进行了很多实践，完成了很多有意思的事情，在这里简单列一个今年的checklist：
 
-- 我领养的一只可爱的小猫，是在我生日的时候领养的，我生日前夕很巧有朋友有一只四个月大的可爱的白色带一点金色的小猫，我一眼就看上了，性格也很乖，属于我喜欢的类型，于是在生日当天和朋友开车去领回家的。想了好久也不知道叫什么好，他的前主人叫他牛肉面(面面)，虽然这个叫法比较亲切但是牛肉面这个称谓实在没有什么寓意。想了好久，我领养他的时候是我26岁生日，本来是想叫他二十六，想了很久，决定叫他【六子】。虽然这个名字很土，但是我想给他特别的意义。在我很喜欢的电视剧少年包青天的最后一章翻龙劫，讲述了一个狸猫换太子的故事，而那个被换掉的理应成为皇帝最后却成为庶民的【真皇帝】就叫六子，在电视剧中他表现的很有气度也很有智慧。而在另一个我很喜欢的电影让子弹飞中，也有一位只吃了一碗粉但是被众人诬陷最后自杀自证清白的平民，也叫六子，他是一位很正直勇敢的人。嗯，是我比较喜欢的名字
-- 在同事的带领下进行了很多尝试，玩了很多桌游，也了解了很多新奇的体验
+- 我领养的一只可爱的小猫，是在我生日的时候领养的，我生日前夕很巧有朋友有一只四个月大的可爱的白色带一点金色的小猫，我一眼就看上了，性格也很乖，属于我喜欢的类型，于是在生日当天和朋友开车去领回家的。想了好久也不知道叫什么好，他的前主人叫他牛肉面(面面)，虽然这个叫法比较亲切但是牛肉面这个称谓实在没有什么寓意。想了好久，我领养他的时候是我26岁生日，本来是想叫他二十六，想了很久，决定叫他【小六】。虽然这个名字很土，但是我想给他特别的意义。在我很喜欢的电视剧少年包青天的最后一章翻龙劫，讲述了一个狸猫换太子的故事，而那个被换掉的理应成为皇帝最后却成为庶民的【真皇帝】就叫六子，在电视剧中他表现的很有气度也很有智慧。而在另一个我很喜欢的电影让子弹飞中，也有一位只吃了一碗粉但是被众人诬陷最后自杀自证清白的平民，也叫六子，他是一位很正直勇敢的人。嗯，是我比较喜欢的名字
+- 在同事的带领下进行了很多尝试，玩了很多桌游(基本上每周都玩)，也了解了很多新奇的事情
 - 大概坚持下来每1-2周至少做一次饭，一整年吃完了一袋半大米
-- 坚持运动，上半年打羽毛球，下半年徒步，虽然没有瘦下来，但是真的感觉自己的健康需要积极保持。
+- 坚持运动，上半年打羽毛球，下半年徒步，基本上每周都有，虽然没有瘦下来，但是真的感觉自己的健康需要积极保持。
+- 购入了14寸的m1 macbook pro，生产力很足
 - 积蓄翻了两倍
 
-今年博客的一个特点是关于js本身甚至于react的修改都越来越少了，更多的记录在于node和ts，jest，以及容器、sre、存储相关。
+今年博客的一个特点是关于js本身甚至于react的修改都越来越少了，更多的记录在于node和ts，jest，以及容器、sre、存储相关。今年实在算不上把很多精力都投入到技术中，不过这一年的的确确活的很幸福，就像v2ex一位老哥说的，【真正的满足并非来自于外在的辉煌，而是在内心深处找到对生活的满足感。 在这片稳定而宁静的日子里，我体会到了平淡生活的美好】。
+
+2023年的关键词应该是"控制"。随着年龄增加，能力越来越强，想法也会越来越多，需要尽力把自己的想法控制在合理的范围内，正视自己，这个在后文会提，如果说之前很多年都在逃避的话，今年很多事都在提醒我，control。
 
 顺便也列一下“每年之最”：
 
@@ -37,10 +42,34 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 ## 2024年的小期望、小目标
 
-- 希望自己可以在工作上有更多的尝试。23年初由于入职了新公司，所以有时候做事情总是有被赶鸭子上架的感觉，不过尽管如此，依然还是拓展了非常多实用的技能。希望24年可以基于23年的工作做的更扎实，并且横向扩展更多
+2024年希望每周减少一些活动，更多地专注于自己。23的感受生活已经非常充足了，需要重新把工作和自己的状态好好促进一下，哈哈哈哈哈哈。
+
+在24年年初的时候读到一篇文章，觉得深受感动，甚至于可以说说到我的心里了，特别摘抄一段：
+
+```
+我不记得自己有什么目标，那种很具体的目标。
+
+有些事情我一直想做，但如果不做，我也能接受。有些事情值得去做，但如果没有做到，我也不觉得很遗憾。
+
+我的目标不是那样。
+
+我做事，我尝试，我建造，我想要取得进步，我想让我做的东西使得自己、使得公司、使得家庭、使得社会变得更好。但我从未设定过目标。这不是我做事的方式。
+
+目标是当你到达时就会消失的东西。一旦你到达了，它就消失了。你总是可以设置另一个，我只是不按这样的步骤行事。
+
+我只是做我正在做的事情，然后就到了现在的地方。今天我继续以同样的方式对待工作和生活。
+```
+
+原文链接：https://github.com/ruanyf/weekly/blob/master/docs/issue-283.md
+
+因此就提出以下想法
+
+- 希望自己可以在工作上有更多的尝试。22年底由于入职了新公司，所以有时候做事情总是有被赶鸭子上架的感觉，不过尽管如此，依然还是拓展了非常多实用的技能。希望24年可以基于23年的工作做的更扎实，并且横向扩展更多
 - 希望24年可以出国旅游一次，无论是新加坡、马利西亚或者澳大利亚、日本，希望是和自己喜欢的朋友
 - 保持健康，保持良好的生活习惯
 - 希望可以开始一段关系良好且稳定的感情
+
+2023年底看了一个电影年会不能停，在随后的几天听到了片尾曲湘江中路有几句歌词特别打动我，"无处停留的我，绕着江若无其事", "在这个无人问津的夜，你是否还记得自己多失落，失落地望着来往的车，都只是路过", 简直是我的真实写照。我平常总是很快乐，很多事情可知道可不知道的，但是我也非常非常地敏感，我不会故意想那些不开心的事情，我已经很会调节自己的心情了，可是一个人总会有莫名其妙的失落，我想24年需要创建更多的自留地，而不只是这一个博客
 
 顺便也列一下2024年的工作计划(WIP)
 
@@ -56,7 +85,7 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 ​		这的的确确是一篇很普通的文档，在我看过的很多论文和交接文档中，它是比较普通的那一种。可是，这是我本科毕业之后，离开中科院之后，读过的最好的文档。它详略得当，重点突出，分章分点，有头有尾，能够用表格或者图或者别的不同的工具来表达它的内容，能够让别人根据自己的需求快速的阅览文档，拿到自己想要的信息。毫不夸张地说，它具备一篇优秀的文档应该有的特点。
 
-​         你可能会问，我们写文档不就应该达到这样的水准吗？不，不是，即使我对自己的要求是这样，但是95%的人写不出这样的文档，即使在读过硕士的人中，我相信很多211的硕士写不出这样的文档，或者说，很费劲才能写出。所以我非常喜欢那篇文档，我又阅读了这位同事写的其他文档，我想说这才是一位认真做事，对自己和他人负责的好同事，我也想自己要认真写代码，也对别人负责，能够让这样的同事认为我是不错的。那天下午我向所有我熟悉的人非常高兴地说了很件事，我想把这样优秀的事情推荐给大家。
+​         你可能会问，我们写文档不就应该达到这样的水准吗？不，不是，即使我对自己的要求是这样，但是95%的人写不出这样的文档，即使在读过硕士的人中，我相信很多211的硕士写不出这样的文档，或者说，很费劲才能写出。所以我非常喜欢那篇文档，我又阅读了这位同事写的其他文档，我想说这才是一位认真做事，对自己和他人负责的好同事，我也想自己要认真写代码，也对别人负责，能够让这样的同事认为我是不错的。那天下午我向所有我熟悉的人非常高兴地说了这件事，我想把这样优秀的事情推荐给大家。
 
 ​		那段时间正好我内推了几篇简历，简历也好，文档也好，真的是考验一个人向别人对外文字输出的能力，而这样的能力是非常重要的。我不止一次地向别人推荐过下面这篇简历：https://visiky.github.io/resume/?user=visiky 。这篇简历的厉害之处并不在于她是蚂蚁金服的或者蚂蚁近卫军之类的奖项，它的优点在于，简历中重点的地方都加粗，使用不同的字号，技术名词首字母大写，行间距适中，字体也都是对的，新罗马的英文更加好看。这样的简历毫无疑问是非常非常让看的人舒服的，很明显写的人花了很多心思，很认真，如果我是面试官，有这样的特点的简历的人，即使技术栈不匹配我也会想面试和他聊聊。
 
@@ -90,7 +119,7 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 ​		这个事情还涉及到另一件事情，就是裁员。最近两年互联网总是裁员，年初一位同事和我抱怨，裁员最优先总是裁测试。我其实也觉得不合理，一个产品的功能迭代，没有测试是完全不行的，或者说，没有办法保证质量的。可是又想了一下，测试的工作确实相对简单，含金量少，但是一个不可或缺能够保证质量的部门却没有含金量，这也许是一个悖论。我对这种问题的建议就是，加强自己的思考，加强自己的不可替代性，那么就算裁员也不一定能裁到自己。
 
-​		追求卓越的另一个同义词可能是极端。变形金刚中擎天柱说过，stand with me，or against with us。这有点残酷，但也是现实。
+​		追求卓越的另一个同义词可能是极端。变形金刚中擎天柱说过，stand with me，or against with us。这有点残酷，但也是现实，保持平衡很重要。
 
 ​		其实不光是工作，生活也是，大部份人都是因为思考深度不够，不够成熟。你以为认真工作，乖乖加班就是成熟？你以为所谓的情商高就是成熟？成熟
 
@@ -150,7 +179,7 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 ​		第二点我想谈的是经验主义。经验主义是绝对不可取的，不论何时都要虚怀若谷地倾听别人的观点，不可以认为“有经验”是一件很了不起的事情，这样的想法只会让人刚愎自用。
 
-​		第三点我想谈的是器量。一个器量足够大，心胸足够广阔的人，无论身处什么位置，都是能够海纳百川的。让别人参考自己的不足，一个人做事是很容易犯错误的。在此我特别想提一位之前遇到的hr，
+​		第三点我想谈的是器量。一个器量足够大，心胸足够广阔的人，无论身处什么位置，都是能够海纳百川的。让别人参考自己的不足，一个人做事是很容易犯错误的。
 
 ### 云原生
 
@@ -196,11 +225,9 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 
 今年想关于这个话题再聊一点东西
 
-​		有一段时间我朋友失恋了，我那个时候也在积极找对象。看着他和女朋友拉扯的过程，我也在反思我自己。女孩子是需要关心的，要体贴的。
+​		有一段时间我朋友失恋了，我那个时候也在积极找对象。看着他和女朋友拉扯的过程，我也在反思我自己。女孩子是需要关心的，要体贴的。可是生活是如此地复杂，我们还要一起面对很多很多事情，如果连最基本的坦诚相待都做不到，连一些小的想法都需要去猜，我不认为我具有面对一起之后生活的勇气。浪漫是很好，耍耍小脾气，小任性，但是踏实的活着才是一种更高明的艺术。如果两个人之间的事情都要如此折腾，那会不会我们两个人的世界太小了？
 
-​		可是生活是如此地复杂，我们还要一起面对很多很多事情，如果连最基本的坦诚相待都做不到，连一些小的想法都需要去猜，我不认为我具有面对一起之后生活的勇气。浪漫是很好，耍耍小脾气，小任性，但是踏实的活着才是一种更高明的艺术。如果两个人之间的事情都要如此折腾，那会不会我们两个人的世界太小了？
-
-​        另一件事是关于欲望，我觉得自己也能相对正视自己的欲望了。人的欲望实在是一件很恐怖的事情，而在过去很多年我只是选择逃避，所谓君子小人只在一念思量，而这往往是欲望引起的。在去年和前年的年终总结中，我总是希望买车买车，今年反而相对冷静了很多，在和很多年长的人聊天中也学到了很多智慧，回归理性。
+​        另一件事是关于欲望，我觉得自己现在也能相对正视自己的欲望了。人的欲望实在是一件很恐怖的事情，而在过去很多年我只是选择逃避，所谓君子小人只在一念思量，而这往往是欲望引起的。在去年和前年的年终总结中，我总是希望买车买车，今年反而相对冷静了很多，在和很多年长的人聊天中也学到了很多智慧，回归理性，车并非必需品，而务实很重要。就像小约翰可汗说的，当一个人选择了出卖自己的灵魂时，终其一生他都只是一个被欲望役使的可悲的奴隶。 我真的很害怕自己被欲望吞噬，失去了自己的性格和理智、人性。说实话，我是个欲望很强的人，但是人的能力总要和欲望匹配的，这样才能驾驭自己的欲望，不是吗?
 
 ​		希望自己可以在未来的某天，找到什么是真正属于自己的，停止流浪。
 
@@ -213,6 +240,8 @@ thumbnail: https://cdn.kunkunzhang.top/2022.png
 ​        比较长时间的了解是一位94年的复旦大学的女生。我们是在一场老乡的聚餐中认识的，当时聊的比较开心，在其后也进展的很快，了解了非常多。我们都是内倾人格，我是infp，她是infj，非常喜欢思考事情，像我这样喜欢讲一些有的没的的人，也比较中她的意。应该说在了解的过程中，并没有很多奇奇怪怪的想法，我觉得她也很开放，愿意接受新想法，并且家境和成长环境类似。她和我不同的地方在于，她一路都很顺风顺水，从小成长环境很好，也没有太多坎坷，所以她的很多想法总是很初始，没有经过事实的考验，也恰恰因此反受折磨。我认识她时，她正被一段 很难割舍但是又几乎不现实的感情所折磨，所以我似乎是她的救星?(本人类似描述)。但是她最终还是很难做决定，并且因此影响了我和她的感情，我并非犹豫不决之人，我也相信这并不是一次偶然，而且由长期的见识和想法决定的，所以我比较干脆地斩断了我们的联系。我们相处应该有半年时间，这半年大家都花了很多心思，非常遗憾
 
 ​	    下半年基本上都用来平复心情，没有开始新的感情，我也和其他人聊过这些。对我来说开始新的感情并不容易，我并不愿意花时间在一些不太可能或者比较肤浅的事情上。
+
+​       不过我也对自己会喜欢的女生渐渐明确起来。对于【什么是不可容忍的】慢慢有清晰的认识。
 
 ## 总结
 
